--- a/package.json
+++ b/package.json
@@ -15,18 +15,32 @@
     "mac": {
       "category": "public.app-category.productivity",
       "icon": "assets/icon.icns",
-      "target": ["dmg", "zip"]
+      "target": [
+        "dmg",
+        "zip"
+      ]
     },
     "win": {
       "icon": "assets/icon.ico",
-      "target": ["nsis", "portable"]
+      "target": [
+        "nsis",
+        "portable"
+      ]
     },
     "linux": {
       "icon": "assets/icon.png",
-      "target": ["AppImage", "deb"]
+      "target": [
+        "AppImage",
+        "deb"
+      ]
     }
   },
-  "keywords": ["jira", "task", "automation", "project management"],
+  "keywords": [
+    "jira",
+    "task",
+    "automation",
+    "project management"
+  ],
   "author": {
     "name": "Jira Bot Team"
   },
@@ -35,6 +49,8 @@
     "@slack/web-api": "^7.8.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "electron-storage": "^1.0.7",
+    "electron-store": "^10.0.1",
     "winston": "^3.17.0",
     "winston-transport": "^4.9.0"
   },
